fixat gap mellanbilderna

--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,9 @@ h2 {
 #sida2 {
     background-color: #e67e22;
 }
+
+.restauranger {
+
+    display: flex;
+    gap: 60px;
+}
